1998-07-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: added child_changed signal and did some extensive
	code clean-up ;).
	
1998-07-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-app-helper.c (gnome_app_find_menu_pos): added a
	check if submenu is not NULL.
	* gnome-mdi.[ch]: removed child_menu_label and all related
	functions. now all children items are inserted where
	child_list_path points.

1998-07-05  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_update_now): New public function
	that tells the canvas to redraw itself immediately, instead of
	waiting for the idle loop.

	* gnome-canvas-text.c: New text item for the canvas, still not finished.

	* libgnomeui.h: 
	* Makefile.am: Added gnome-canvas-text.[ch].

1998-07-05  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* gnome-mdi.c (app_create): Fixed a typo.

1998-07-04  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* gnome-app-helper.h (GNOMEUIINFO_JUSTIFY_RIGHT): Fixed a wrong
	order of GnomeUIInfo fields, which caused a compile error.

1998-07-03  Chris Lahey  <clahey@umich.edu>

	* libgnomeui.h: Check for GDK_HAVE_FULL_CROSSING_EVENT before
	including gnome-canvas.h and gnome-canvas-rect-ellipse.h.

Fri Jul  3 16:51:31 CDT 1998  Richard Hestilow  <hestgray@ionet.net>

	* gnome-app.c (gnome_app_set_toolbar) : Added check for 
	Gtk+ support of relief features. (GTK_HAVE_RELIEF_STYLE)

Mon Jun 29 14:10:48 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-preferences.h, gnome-preferences.c 
	(gnome_preferences_get_toolbar_relief,
	gnome_preferences_set_toolbar_relief): Whether the toolbar buttons
	have the beveled edge.
	* gnome-app.c (gnome_app_set_toolbar): Turn off the toolbar button
	relief if user requested it. 
	* gnome-preferences.c (gnome_preferences_load): Oops, forgot to
	push a new prefix for the GnomeApp stuff, it was being saved under
	Dialog prefs.
	* gnome-dialog.h, gnome-dialog.c (gnome_dialog_run_and_die):